--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
     margin:0;
     box-sizing:border-box;
 }
+body{
+    font-family: "Poppins", sans-serif;
+    width:100%;
+}
 #home{
     width:100%;
     height:100vh;
@@ -94,11 +98,17 @@
     width:70px;
     height: 60px;
 }
-.bd{
+#bd{
+    height: 70vh; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;                         
+}
+.content1{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 70vh;
 }
 .peace{
     display: flex;
@@ -106,7 +116,40 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    gap:10px;
+    width:300px;
+    /* box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5); */
     h5{
         margin-bottom: 10px;
     }
+}
+/* .floatTop{
+    position: relative;
+    width: 100%;
+    height:auto;
+}
+.floatTop > .card{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    gap:30px;
+    position:absolute;
+    top:90%;
+    left:50%;
+}
+.card{
+    width:250px;
+    padding:15px;
+    text-align: center;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
+} */
+#industry{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+.industryCard{
+    width:350px;
+    padding:10px;
+    border: 1px solid gray;
 }
