--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 body{
     font-family: "Poppins", sans-serif;
     width:100%;
+    background-color: #f5f5f5;
 }
 #home{
     width:100%;
@@ -13,7 +14,7 @@ body{
     background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('images/hero-cover.png');
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     background-position: center;
     color:white;
 
@@ -99,16 +100,22 @@ body{
     height: 60px;
 }
 #bd{
-    height: 70vh; 
+    height: 100vh; 
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;                         
+    justify-content: center;    
+    margin-bottom: 30px;                     
 }
 .content1{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: white;
+    margin-top: 10%;
+    position: absolute;
+    width: 100%;
+    padding: 100px 20px;
 }
 .peace{
     display: flex;
@@ -123,21 +130,30 @@ body{
         margin-bottom: 10px;
     }
 }
-/* .floatTop{
-    position: relative;
+.floatTop{
     width: 100%;
     height:auto;
-}
-.floatTop > .card{
+    position:absolute;
+    top: 85%;
     display:flex;
     justify-content: center;
     align-items: center;
-    gap:30px;
-    position:absolute;
-    top:90%;
-    left:50%;
+    padding: 30px;
 }
-.card{
+
+.floatTop > .card{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left:30px;
+    background-color: white;
+    margin-bottom:2% ;
+    padding: 30px;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
+}
+
+/* .card{
     width:250px;
     padding:15px;
     text-align: center;
@@ -145,11 +161,93 @@ body{
 } */
 #industry{
     display: flex;
+    width: 100%;
     flex-direction: column;
     text-align: center;
+    /* height: 100vh; */
+    padding-top: 80px;
+    padding-bottom: 150px;
+    position: absolute;
+    margin-top: 35%;
+}
+#industry .desc{
+    margin-top: 30px;
+
+}
+.cards{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 120px;
+    gap: 40px;
 }
 .industryCard{
     width:350px;
-    padding:10px;
-    border: 1px solid gray;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding:30px;
+    border: 1px solid rgb(220, 220, 220);
+    background-color: white;
+    border-radius: 10px;
+}
+.industryCard > img:nth-child(1){
+    width:120px;
+    height: 120px;
+}
+.industryCard>p{
+    margin: 20px 0px 20px 0px;
+    color: gray;
+    line-height: 1.3rem;
+}
+.logos{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 19%;
+    max-width: 800px;
+    /* width:60%; */
+    margin-bottom: 30px;
+    margin-top: 100%;
+    
+}
+.images{
+    width: 40px;
+    height: 37px;
+}
+.gradient{
+    width:60%;
+    display: flex;
+    left: 19%;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    padding:20px;
+    background: linear-gradient(to right, purple,rgb(245, 8, 174)
+    )
+}
+.gradient > div > button{
+    padding: 15px;
+    outline: none;
+    border: none;
+    color: white;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
+    background-color: rgba(33, 208, 231, 0.959);
+
+}
+
+.gradient > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.gradient > div > input{
+    padding: 15px;
+    border: none;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+.gradient > p{
+    color: white;
 }
