--- a/styles.css
+++ b/styles.css
@@ -21,39 +21,51 @@ body{
 }
 .nav{
     display:flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     padding:20px;
+    width: 90%;
+    margin-left: 7%;
     height:70px;
 
 }
 .logo{
-    font-size: 20px;
+    font-size: 23px;
     font-weight: bold;
     margin-right: 70px;
+    margin-top: 18px;
+    height: fit-content;
 }
 .links{
     display: flex;
+    height: fit-content;
     justify-content: center;
     align-items: center;
 
 }
-.links ul{
+.links >.navLinks{
     display:flex;
+    justify-content: center;
+    align-items: center;
     list-style: none;
+    height: fit-content;
 }
-.links ul li{
+
+.links > .navLinks > li{
     margin-right:20px;
+    color: white;
+    font-size: 16px;
 }
 .login{
     display:flex;
+    margin-top: 20px;
     justify-content: center;
     align-items: center;
     gap:20px;
 }
 .login > button{
     border:none;
-    background-color: rgb(60, 199, 241);
+    background-color: rgb(10, 134, 179);;
     padding:10px 20px;
     color:white;
     border-radius:5px;
@@ -73,13 +85,21 @@ body{
 .body-content > p{
     margin-bottom: 20px;
 }
-.btn-section{
+/* .btn-section{
     display:flex;
+} */
+.btns-section{
+    .btn2:hover{
+        background-color: rgb(10, 134, 179); ;
+        color: #f5f5f5;
+        border: none;
+        outline: none;
+    }
 }
 .btn1{
     width:120px;
     border: none;
-    background-color: rgb(60, 199, 241) ;
+    background-color: rgb(10, 134, 179); ;
     padding: 10px;
     border-radius: 15px;
     color: #f5f5f5;
@@ -88,6 +108,7 @@ body{
 .btn2{
     width:100px;
     border: none;
+    transition: background-color 0.5s ease-in;
     background-color: transparent;
     border: 1px solid white;
     padding:10px;
@@ -108,6 +129,7 @@ body{
     justify-content: center;
     align-items: center;
     padding: 30px;
+    overflow: hidden;
 }
 
 .floatTop > .card{
@@ -120,6 +142,16 @@ body{
     margin-bottom:2% ;
     padding: 30px;
     box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
+
+    p{
+        color: gray;
+    }
+    
+}
+.people{
+    color:rgb(10, 134, 179);
+    width:40px;
+    height:100px;
 }
 #bd{
     height: 100vh; 
@@ -145,7 +177,6 @@ body{
     text-align: center;
     gap:10px;
     width:300px;
-    /* box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5); */
     h5{
         margin-bottom: 10px;
     }
@@ -220,7 +251,7 @@ body{
     color: white;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
-    background-color: rgba(33, 208, 231, 0.959);
+    background-color: rgb(10, 134, 179);;
 
 }
 
@@ -267,9 +298,11 @@ body{
         margin-bottom: 20px;
     }
 }
+
 .standard{
     background-color: rgb(2, 9, 49);
     color:white;
+    height: 105%;
 
 }
 .organize{
@@ -319,17 +352,20 @@ body{
 }
 #branches{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     background-color: rgb(2, 7, 37);
     color:white;
-    height: 80vh;
+    height: 90vh;
+    p{
+        font-size: 15px;
+    }
 }
 .upper{
     display: flex;
     justify-content: center;
-    align-items: center;
     height: 300px;
-    margin-top: 30px;
+
 }
 #branches .branchContent{
     max-width: 30%;
@@ -344,50 +380,244 @@ body{
     height: 150px;
 }
 .appointment{
-    max-width: 500px;
-    display: flex;
+    width:60%;
+    height:400px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    /* gap: 30px; */
     background-color: white;
-    /* position: absolute;
-    margin-top:25% ; */
+    grid-template-areas: 'i d d';
+    position: absolute;
+    margin-top:50% ; 
+    margin-left: 22%;
     
 }
 .fam{
-    width:30%;
-}
-.fam > img{
-    width:100%;  
+    grid-area: i;
+    background: url("./images/contact.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .details{
+    grid-area: d;
+    display: flex;
+    flex-direction: column;
+    padding:0px 20px;
+    p{
+        color: #000;
+        font-size: 15px;
+        margin-bottom: 10px;
+    }
+    h2{
+        font-weight: bold;
+        color: #000;
+        text-align: center;
+        margin-top: 30px;
+    }
+    input, select{
+        border: none;
+        padding: 10px;
+        background-color: lightgrey;
+        margin-bottom: 10px;
+        border-radius: 5px;
+    }
+}
+.appointmentBtn{
+    border: none;
+    padding: 10px;
+    background-color: rgb(10, 134, 179);
+    color:white;
+    border-radius: 5px;
+    margin-top: 15px;
 }
 #footer{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top:50px;
-    height:80vh;
+    height:70vh;
     flex-direction: column;
-    gap:50px;
+    max-width: 70%;
+    margin:300px auto;
+    margin-bottom: 0;
+    /* gap:50px; */
 }
 .footerContent{
     display: flex;
-    /* justify-content: space-between; */
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 
+}
+.text > p{
+    font-size: 10px;
+    color: rgb(150, 150, 150);
+    margin-top: 10px;
 }
 .contact{
     width:150px;
     border: none;
     border-radius:5px;
     color: white;
-    background-color: rgb(60, 199, 241); 
+    background-color: rgb(10, 134, 179); 
+    margin-left: 30px;
+    padding:10px;
 }
 .footerLinks{
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 50px;
+    width:100%;
 }
 ul li{
     list-style: none;
     font-size: 10px;
     color: rgb(150, 150, 150);
+    margin-top: 20px;
+}
+.made{
+    display: flex;
+    justify-content: space-between;
+    width:100%;
+    font-size: 10px;
+    color: rgb(150, 150, 150);
+    margin-top:50px;
+}
+.madeIcons{
+   display:flex ;
+   justify-content: space-between; 
+}
+.socials{
+    color: rgb(60, 199, 241) ;
+    width:20px;
+    height: 20px;
+    margin-right:10px;
+}
+@media screen and (max-width:1142px){
+    .appointment{
+        margin-top: 80%;
+
+    }
+
+
+}
+@media screen and (max-width:890px){
+    .logo{
+        margin-right: 50px;
+    }
+    .login > button{
+        font-size: 14px;
+    }
+    .appointment{
+        margin-top: 85%;
+    }
+    #footer{
+        margin:250px auto;
+        margin-bottom: 0;
+    }
+}
+
+@media screen and (max-width:790px) {
+    .peace{
+        flex-direction: column;
+    }
+    .cards{
+        gap:20px;
+    }
+    .upper{
+        margin-top: 0;
+    }
+
+    .nav{
+        margin-left: 5%;
+        /* width:100%; */
+        display: none;
+    }
+    .login > button{
+
+        font-size:13px ;
+        padding: 10px;
+    }
+
+    .logo{
+        font-size: 18px;
+    }
+    .navLinks > li{
+        font-size: 13px;
+    }
+    .appointment{
+        margin-top: 110%;
+    }
+    #branches .branchContent {
+        h1{
+            font: size 18px;
+        }
+        p{
+            font-size: 13px;
+        }
+    }
+    .gradient > p{
+        font-size: 15px;
+        margin-right: 5px;
+    }
+    .gradient{
+        padding: 10px;
+    }
+    .gradient > div > input{
+        padding:10px;
+    }
+    .gradient > div > button{
+        padding:10px;
+    }
+}
+@media screen and (max-width:650px){
+    .priceContainer{
+        flex-direction: column;
+        width:100%;
+        gap:20px;
+    }
+    .free, .standard ,.premium{
+
+        
+    }
+    .details{
+        h2{
+            font-size: 16px;
+        }
+        p{
+            font-size: 13px;
+        }
+    }
+    .appointment{
+        margin-top: 120% ;
+    }
+    /* .floatTop > .card{
+        width: 100px;
+    } */
+
+}
+@media screen  and (max-width:600px){
+    .content1,.cards{
+        flex-direction: column;
+    }
+ 
+}
+@media screen and (max-width:580px){
+    .appointment{
+        margin-top: 130% ;
+    }
+    #footer{
+        width: 100%;
+    }
+    .gradient{
+        width:80%;
+    }
+    .gradient > div > input{
+        width: 150px;
+    }
+    .gradient p{
+        font-size: 10px;
+    }
+
 }
